fixes bug 257875 "invalid javascript keeps logo animating" r+sr=jst